--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ Objetivo:
 Construir uma plataforma autoral e diferenciada — estética, funcional e conceitualmente — para apresentar o curso como uma obra em si, articulando arte, código, teoria e técnica.
 
 Equipe:
-- UX/UI: Mauro
-- Frontend: Aldry
-- Conteúdo, roteiro e direção: [Seu nome]
+- UX/UI: Mauro Yida
+- Frontend: Aldry Vinicius 
+- Conteúdo, roteiro e direção: Kenny Fernandes
 `;
 
     let i = 0;
