--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     font-size: 16px;
     max-width: 960px;
     margin: 0 auto;
+    line-height: 1.5;
   }
 
   #terminal {
@@ -34,9 +35,21 @@
   /* RESPONSIVO PARA CELULAR */
   @media (max-width: 768px) {
     body {
-      font-size: 25px;
-      line-height: 1.5;
-      padding: 1.2rem;
+      font-size: 20px;
+      line-height: 1.7;
+      padding: 1.5rem 1rem;
+    }
+
+    .cursor {
+      width: 12px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    body {
+      font-size: 22px;
+      line-height: 1.8;
+      padding: 1.5rem 0.8rem;
     }
   }
 </style>
